Добавлен фон в зависимости от получаемой от API погоды

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="weather">
+    <div class="weather" id = 'weather'>
       <div class="time"></div>
       <div class="location">
         <div class="location__sity"></div>
@@ -40,5 +40,6 @@
     <script type="module" src="/js/weatherScript.js"></script>
     <script type="module" src="/js/changeIconWeatherScript.js"></script>
     <script type="module" src="/js/changeConditionScript.js"></script>
+    <script type="module" src="/js/changeBackgroundScript.js"></script>
   </body>
 </html>
