--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="weather" id = 'weather'>
         <div class="time"></div>
         <div class="location">
-          <div class="location__sity"></div>
+          <div class="location__sity">Москва</div>
           <div class="icon">
             <img
               class="weatherIcons"
@@ -28,8 +28,11 @@
             />
           </div>
         </div>
-        <div class="temperature"></div>
-        <div class="condition" id="condition"></div>
+        <div class="temperature">
+        <div class="temperature__number">-5</div>
+        <div class="temperature__icon">°</div>
+      </div>
+        <div class="condition" id="condition">Пасмурно</div>
       </div>
       <video class="bgVideo__media" id='bgVideo__media'type="video" src="" autoplay muted loop ></video>
     
