--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <title>Document</title>
   </head>
   <body>
+    <div class="preloader__window">
+      <div class="preloader-5"></div>
+      <h3 class="preloader__text">Завариваем чай</h3>
+    </div>
+  
     <div class="bgVideo">
       <div class="weather" id = 'weather'>
         <div class="time"></div>
