--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <div class="temperature__number">-5</div>
         <div class="temperature__icon">°</div>
       </div>
+      <div class="feels_like"></div>
         <div class="condition" id="condition">Пасмурно</div>
       </div>
       <video class="bgVideo__media" id='bgVideo__media'type="video" src="" autoplay muted loop ></video>
