Почистил код от мусора

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <video class="bgVideo__media" id='bgVideo__media'type="video" src="" autoplay muted loop ></video>
     
     
-    <!-- <div class="about">Development and design <br> Artem Bychkov</div> -->
+    <div class="about">Development and design <br> Artem Bychkov</div>
     <div class="about__icons">
       <a href=""><img src="" alt="" /></a>
       <a href=""><img src="" alt="" /></a>
