--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
     <title>Weather Widget</title>
   </head>
   <body>
-    <div class="preloader__window">
+    <!-- <div class="preloader__window">
       <div class="preloader-5"></div>
       <h3 class="preloader__text">Завариваем чай</h3>
-    </div>
+    </div> -->
     
    <div class="mainContainer">
       <div class="leftBlockWeather" id="leftBlockWeather">
@@ -132,7 +132,7 @@
     <script type="module" src="/js/changeIconWeatherScript.js"></script>
     <script type="module" src="/js/changeConditionScript.js"></script>
     <script type="module" src="/js/changeBackgroundScript.js"></script>
-    <script type="module" src="/js/searchCityScript.js"></script>
+    <!-- <script type="module" src="/js/searchCityScript.js"></script> -->
     <script type="module" src="/js/leftBlockInformationSrcipt.js"></script>
     <script type="module" src="/js/weatherForecastScript.js"></script>
   </body>
