bug fix na prodakshene blya :c

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 </div>
                 <div id="search__block" class="search__block">
                   <div id="location" class="row location">
-                    <div class="col location__sity">Москва</div>
+                    <div class="col location__sity"></div>
                     <div class="col icon">
                       <img
                         class="weatherIcons"
@@ -81,9 +81,9 @@
                       />
                     </div>
                   </div>
-                  <div class="row justify-content-center temperature__number">+7°</div>
+                  <div class="row justify-content-center temperature__number"></div>
                  
-                  <div class="row justify-content-center condition" id="condition">хуй</div>
+                  <div class="row justify-content-center condition" id="condition"></div>
                 </div>
                 <div id="selectCity" class="selectCity">
                 
