--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body>
-    <!-- <div class="preloader__window">
+    <div class="preloader__window">
       <div class="preloader-5"></div>
       <h3 class="preloader__text">Завариваем чай</h3>
-    </div> -->
+    </div>
 
     <div class="mainContainer">
       <div class="container text-center">
