--- a/index.html
+++ b/index.html
@@ -97,49 +97,49 @@
                
               <div class="row flex-nowrap downBlockWeather" id="downBlockWeather">
                 <ul id="weatherForecast" class="row weatherForecast">
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">понедельник</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
                     <h5 class="weatherForecast__temp" id="weatherForecast__temp">+7</h5>
                     <h6 class="weatherForecast__condition">Пасмурно</h6>
                   </li>
-                  <li class="col-3 weatherForecast__list">
+                  <li class="col weatherForecast__list">
                     <h4 class="dayOfTheWeek">Воскресенье</h4>
                     <p class="date"> 14 декабря</p>
                     <img class="weatherForecast__icon" id="weatherForecast__icon" src="/icons/animated/bkn_+ra_d.svg" alt="">
